--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,25 @@ section.habilidades{
     width: 80px;
     height: 80px;
 }
+.container-est{
+    width: 30%;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+.logo{
+    border-radius: 10px;
+    width: 85px;
+    height: 85px;
+    padding-top: 20px;
+    margin: auto;
+}
+.logo1{
+    width: 80px;
+    height: 80px;
+}
 section.projeto{
     font-family: 'Raleway', sans-serif;
     text-align: center;
