--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -14,17 +14,14 @@
     .container-hab{
         margin-left: 70px;
     }
-    .slide img{
-        width: 800px;
-    }
     .slider{
         margin: 0 auto;
-        width: 800px;
+        width: 390px;
         height: 200px;
         overflow: hidden;
     }
     .slides{
-        width: 200%;
+        width: 400%;
         height: 400px;
         display: flex;
     }
@@ -36,14 +33,20 @@
     .slide img{
         width: 400px;
     }
+    .calc{
+        height: 200px;
+    }
+    .manual-navigation{
+        display: none;
+    }
     .manual-btn{
         display: none;
     }
     .navigation-auto div{
         display: none;
     }
-    .calc{
-        height: 200px;
+    .navigation-auto{
+        display: none;
     }
     footer{
         margin-top: 100px;
